# integrated_attitude_estimator

./: .gitignore  CMakeLists.txt  README.md  docker_run.sh  download_weights.sh  package.xml  server_docker_run.sh
docker/: Dockerfile  docker_build.sh
include/integrated_attitude_estimator/: ekf_attitude_estimator.h
launch/: ekf_attitude_estimator.launch  play_rosbag.launch  ros_image_infer.launch  verify_ekf_attitude.launch
pyyaml/: frame_infer_config.yaml  publish_correct_angle_config.yaml  ros_infer_config.yaml  train_config.yaml
scripts/: frame_infer.py  publish_correct_angle.py  ros_infer.py  train.py
scripts/common/: SII2022_model.py  data_transform_mod.py  dataset_mod_AirSim.py  dataset_mod_Gimbal.py  make_datalist_mod.py
scripts/models/: classification_fc_layer.py  conv2d_same.py  feature_extractor_high.py  feature_extractor_low.py  features.py  helpers.py  linear.py  senet.py  vit.py  vit_utils.py
scripts/verify_code/: ekf_attitude_verification.py  ekf_attitude_verification.yaml  integrated_verify_infer.py  integrated_verify_infer.yaml
scripts/verify_code/old_code/: trash_visualize_grad_cam.py  trash_visualize_grad_cam_config.yaml  verify_infer_1.py  verify_infer_1.yaml  verify_infer_2.py  verify_infer_2.yaml  verify_infer_3.py  verify_infer_3.yaml
src/: ekf_attitude_estimator.cpp
trash_code/: train_SII2022.py  train_config_SII2022.yaml
